<resources>
    <string name="app_name">&app_name;</string>
    <string name="tab_text_1">SmartBnd</string>
    <string name="tab_text_2">MMR</string>
    <string name="tab_text_3">MMR2</string>
    <string name="tab_text_4">Sock1</string>
    <string name="tab_text_5">Sock2</string>
    <string name="tab_text_6">Others</string>
    <string name="scan_button">&scan_button;</string>
    <string name="fav_button">&fav_button;</string>
    <string name="main_title">MS Tracking Socks</string>
    <string name="app_version">&app_name; App version </string>
    <string name="app_description">The &app_name; app let the user connect his smartphone with multiple wearable devices. The app will periodically send data to a MongoDB identified by the Mac address of the phone.
        <br/>It works as follows:</string>
    <string name="scan_button_description"><b><i>&scan_button; button</i></b>: pressing this button brings you to a new screen where you will be able to look for the available wearable devices near you.</string>
    <string name="fav_button_description"><b><i>&fav_button; button</i></b>: pressing this button brings you to a new screen where you will be able to check your favourite wearable devices.</string>
    <string name="app_information">Warning: The user has to give Bluetooth and Location privileges to the app. This settings shall be activated for a proper function of the app.</string>
    <string name="ib_close_description">CloseButton</string>
    <string name="available_mmr_devices">Available MMR Devices</string>
    <string name="available_mmr2_devices">Available MMR2 Devices</string>
    <string name="available_sock_devices">Available Sock Devices</string>
    <string name="available_sock1_devices">Available Sock1 Devices</string>
    <string name="available_sock2_devices">Available Sock2 Devices</string>
    <string name="available_smartband_devices">Available SmartBands</string>
    <string name="menu_back_to_scan">Scan new wearable</string>
    <string name="menu_disconnect">Disconnect device</string>
    <string name="menu_info">Info</string>
    <string name="choose_device">Choose a device to connect</string>
    <string name="smartband">SmartBand</string>
    <string name="mmrdevice">MMR Devices</string>
    <string name="mmr2device">MMR2 Devices</string>
    <string name="sock1device">Sock1 Devices</string>
    <string name="sock2device">Sock2 Devices</string>
    <string name="others">Other Devices</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="temperature">Temperature (\u2103):&#160;&#160;</string>
    <string name="illuminance">Illuminance (Lux):&#160;&#160;</string>
    <string name="altitude">Altitude (m):&#160;&#160;&#160;</string>
    <string name="gyroscope">Gyroscope (x,y,z):&#160;&#160;&#160;</string>
    <string name="magnetometer">Magnetometer (x,y,z):&#160;&#160;&#160;</string>
    <string name="gyroscope_init">{x:0, y:0, z:0}</string>
    <string name="arm_angle">Ankle Angle (\u00B0):&#160;&#160;&#160;</string>
    <string name="acceleration">Acceleration (x,y,z):&#160;&#160;&#160;</string>
    <string name="sss">SSS (s0,s1,s2):&#160;&#160;&#160;</string>
    <string name="sss_init">{s0:0, s1:0, s2:0}</string>
    <string name="acceleration_init">{x:0, y:0, z:0}</string>
    <string name="mag_init">{x:0, y:0, z:0}</string>
    <string name="location">Location (Lat, Lng):&#160;&#160;&#160;</string>
    <string name="data_from">Data from:&#160;&#160;&#160;</string>
    <string name="ellipsis">...</string>
    <string name="triple_0">000</string>
    <string name="favDev_mainTitle">Favourite Devices</string>
    <string name="activity_main_imageView_description">MS_Tracking App version </string>
    <string name="connect_button">Connect</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_reconnect_attempt">Reconnecting</string>
    <string name="message_wait">Please wait</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="remove_button">Remove</string>
    <string name="time_tv">Time:&#160;&#160;</string>
    <string name="waiting_tv">waiting</string>
    <string name="heart_rate_tv">Heart Rate:&#160;&#160;</string>
    <string name="high_blood_pressure_tv">Blood Pressure (High):&#160;&#160;</string>
    <string name="low_blood_pressure_tv">Blood Pressure (Low):&#160;&#160;</string>
    <string name="steps_tv">Steps:&#160;&#160;</string>
    <string name="minus_eins_tv">-1</string>
    <string name="distance_tv">Distance (Km):&#160;&#160;</string>
    <string name="calories_tv">Calories:&#160;&#160;</string>
    <string name="sleeping_hours_tv">Sleeping hours:&#160;&#160;</string>
    <string name="smartband_description">This tab allocates the information of a SmartBand device (when connected).
        <br/>First it shows the MAC address of the device and two main buttons, which Start or Stop the information exchange between the device and the smartphone and also between the smartphone and the database.
        <br/>The data is collected aprox. every minute.
        <br/>The colors of the MAC address and time mean the following:</string>
    <string name="mmr_description">This tab allocates the information of an MMR device (when connected).
        <br/>First it shows the MAC address of the device and two main buttons, which Start or Stop the information exchange between the device and the smartphone and also between the smartphone and the database.
        <br/>The colors of the MAC address mean the following:</string>
    <string name="mmr2_description">This tab allocates the information of an MMR2 device (when connected).
        <br/>First it shows the MAC address of the device and two main buttons, which Start or Stop the information exchange between the device and the smartphone and also between the smartphone and the database.
        <br/>The colors of the MAC address mean the following:</string>
    <string name="sock1_description">TO DO
        <br/>TO DO.
        <br/>TO DO</string>
    <string name="green_color_description">The green color indicates that the device is properly connected and the smartphone is collecting data and sending it to the DataBase.</string>
    <string name="orange_smartband_color_description">The orange color indicates that the smartphone is trying to reconnect the smartphone. It will be reconnected when it is within the range of the smartphone.</string>
    <string name="orange_mmr_color_description">The orange color indicates that the smartphone is trying to reconnect the MMR. The reconnetion will star after 4min without receiving dta to collect, or by pressing the Stop button.</string>
    <string name="orange_mmr2_color_description">The orange color indicates that the smartphone is trying to reconnect the MMR2. The reconnetion will star after 4min without receiving dta to collect, or by pressing the Stop button.</string>
    <string name="red_color_description">The red color indicates that the data collecting is stopped.</string>
    <string name="green_sock_color_description">The green color indicates that the device is properly connected and the smartphone is collecting data and sending it to the DataBase.</string>
    <string name="orange_sock_color_description">The orange color indicates that the smartphone is trying to reconnect the Sock. The reconnetion will star after 4min without receiving dta to collect, or by pressing the Stop button.</string>
    <string name="red_sock_color_description">The red color indicates that the data collecting is stopped.</string>
    <string name="TEST_SENSORIA_CORE">Test Sensoria Core</string>
    <string name="START_SCAN">Start Scan</string>
    <string name="STOP_SCAN">Stop Scan</string>
    <string name="CONNECT">Connect</string>
    <string name="DISCONNECT">Disconnect</string>
    <string name="STOP">Stop</string>
    <string name="PAUSE">Pause</string>
    <string name="START_SESSION">Start Session</string>
    <string name="END_SESSION">End Session</string>
    <string name="RESUME">Resume</string>
    <string name="ACQUIRE_EEPROM">Acquire EEPROM</string>
    <string name="RELEASE_EEPROM">Release EEPROM</string>
    <string name="READ_DATA_CONFIGURATION_STORAGE">Read Config Storage</string>
    <string name="READ_PROTOCOL_VERSION">Read Protocol Version</string>
    <string name="GENERIC_ACCESS_SERVICE">Generic Access Service</string>
    <string name="GENERIC_ATTRIBUTE_SERVICE">Generic Attribute Service</string>
    <string name="DEVICE_INFORMATION_SERVICE">Device Information Service</string>
    <string name="BATTERY_SERVICE">Battery Service</string>
    <string name="SENSORIA_CORE_STREAMING_SERVICE">Streaming Service</string>
    <string name="SENSORIA_CORE_CONTROL_POINT_SERVICE">Control Point Service</string>
    <string name="SENSORIA_CORE_CUSTOM_CONFIGURATION_SERVICE">Custom Configuration</string>
    <string name="SENSORIA_CORE_SMOKE_TEST_SERVICE">Smoke Test</string>
    <string name="SENSORIA_CORE_CONFIGURATION_STORAGE">Configuration Storage</string>
    <string name="ERROR_BLUETOOTH_NOT_SUPPORTED">Bluetooth is not supported on this device.</string>
    <string name="ERROR_BLUETOOTH_LE_NOT_SUPPORTED">Bluetooth Low Energy is not supported on this
        device.</string>
    <string name="ERROR_TITLE">Error!</string>
    <string name="ERROR_SCAN_NOT_STARTED">Cannot start BLE scan</string>
    <string name="ERROR_NO_DEVICE_FOUND"> There is no device to connect to</string>
    <string name="ERROR_NO_CONNECTION">Unable to connect to the specific device</string>
    <string name="ERROR_INVALID_MAC_ADDRESS">The MAC address doo not match at any device</string>
    <string name="ERROR_DEVICE_NOT_STARTED">Invalid or null device</string>
    <string name="ERROR_INVALID_OR_NULL_CALLBACK">Invalid or null BluetoothGattCallback</string>
    <string name="ERROR_NO_EEPROM">Cannot Acquire EEprom</string>
    <string name="ERROR_CANNOT_WRITE_CONTROL_POINT">Cannot write control point</string>
    <string name="ERROR_FAILURE">Unknown error</string>
    <string name="ERROR_INVALID_PAYLOAD">Invalid Payload, resetting to default configuation</string>
    <string name="ERROR_UNFORMATTED_STORAGE">Unformatted error, resetting to default configuation</string>
    <string name="ERROR_CRC_FAILED">Failed CRC computation, resetting to default configuation</string>
    <string name="ERROR_INSTANTIATION">Instantiation error</string>
    <string name="ERROR_ILLEGAL_ACCESS">Illegal Access</string>
    <string name="ERROR_INVALID_GARMENT_TYPE">Invalid Garment type</string>
    <string name="ERROR_INVALID_BODY_LOCATION">Invalid Body location</string>
    <string name="ERROR_INVALID_SENSOR_TYPE">Invalid Sensor type</string>
    <string name="ERROR_EXCEEDS_BOUNDS_EEPROM">ECalculated address exceeds bounds of EEPROM device
        </string>
    <string name="ERROR_MAXIMUM_NUMBER_OF_BYTES_EEPROM">
        Requested number of bytes to be written is greater than maximum. (16 bytes)
    </string>
    <string name="ERROR_SCAN_ALREADY_STARTED">
        Fails to start scan as BLE scan with the same settings is already started by the app.
    </string>
    <string name="ERROR_SCAN_APPLICATION_REGISTRATION_FAILED">
        Fails to start scan as app cannot be registered.</string>
    <string name="ERROR_FEATURE_NOT_IMPLEMENTED">
        Fails to start power optimized scan as this feature is not supported.
    </string>
    <string name="ERROR_SCAN_INTERNAL_ERROR">Fails to start scan due an internal error</string>
    <string name="ERROR_ILLEGAL_ARGUMENT_EXCEPTION">
        The method has been passed an illegal or inappropriate argument.
    </string>
    <string name="ENTER_DFU_MODE">Enter DFU Mode</string>
    <string name="SAVE_AND_EXIT">Save configuration and exit</string>
    <string name="EXIT_WO_SAVE">Exit without saving</string>
    <string name="NEW_CONFIGURATION_STORAGE">New Configuration</string>
</resources>