<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main_info_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="25dp"
    android:paddingHorizontal="10dp"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_alignParentEnd="true"
        android:paddingTop="8dp"
        android:background="@null"
        android:contentDescription="@string/ib_close_description"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/ib_close"
        android:background="@color/colorAccent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp">

            <TextView
                android:id="@+id/app_description_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/app_description"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/scan_button_description_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:drawableStart="@android:drawable/ic_menu_search"
                android:drawablePadding="10sp"
                android:text="@string/scan_button_description"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/fav_button_description_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableStart="@android:drawable/btn_star_big_on"
                android:drawablePadding="10sp"
                android:text="@string/fav_button_description"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/app_information_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_info_details"
                android:drawablePadding="10sp"
                android:text="@string/app_information"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>