<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.socks.CoreTestActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="@color/stainedwhite2"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:id="@+id/scan_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/myToolbar_scan"
        android:background="@color/colorAccent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/available_sock1_devices"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonStartScan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:onClick="startScan"
        android:text="@string/START_SCAN"
        android:textAllCaps="false"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerDeviceCode"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="234dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartScan"
        app:layout_constraintHorizontal_bias="0.0"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonStopScan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:onClick="stopScan"
        android:text="@string/STOP_SCAN"
        android:textAllCaps="false"
        tools:ignore="MissingConstraints"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonStartScan"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:onClick="connect"
        android:text="@string/CONNECT"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDeviceCode" />

    <Button
        android:id="@+id/buttonDisconnect"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:enabled="false"
        android:onClick="disconnect"
        android:text="@string/DISCONNECT"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonConnect"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonGenericAccessServiceStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:onClick="startGenericAccessService"
        android:text="@string/GENERIC_ACCESS_SERVICE"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonConnect"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"

        android:visibility="invisible"/>

    <Button
        android:id="@+id/buttonGenericAttributeServiceStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:onClick="startGenericAttributeService"
        android:text="@string/GENERIC_ATTRIBUTE_SERVICE"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonGenericAccessServiceStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonDeviceInformationServiceStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:enabled="false"
        android:onClick="startDeviceInformationService"
        android:text="@string/DEVICE_INFORMATION_SERVICE"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonGenericAccessServiceStart" />

    <!-- android:visibility="visible" -->
    <Button
        android:id="@+id/buttonBatteryServiceStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:text="@string/BATTERY_SERVICE"
        android:textAllCaps="false"

        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDeviceInformationServiceStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"

        android:visibility="invisible" />

    <!-- android:visibility="visible" -->

    <!-- android:visibility="visible" -->
    <Button
        android:id="@+id/buttonSensoriaCoreStreamingServiceStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:background="@drawable/press_button"
        android:textColor="@color/white"
        android:onClick="startSensoriaStreamingService1"
        android:text="@string/SENSORIA_CORE_STREAMING_SERVICE"
        android:textAllCaps="false"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeviceInformationServiceStart" />

    <Button
        android:id="@+id/buttonSensoriaCoreControlPointServiceStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:onClick="startSensoriaControlPointService"
        android:text="@string/SENSORIA_CORE_CONTROL_POINT_SERVICE"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSensoriaCoreStreamingServiceStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- android:visibility="visible" -->
    <Button
        android:id="@+id/buttonDFU"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:onClick="startDFU"
        android:text="@string/ENTER_DFU_MODE"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonSensoriaCoreStreamingServiceStart" />

    <!-- android:visibility="visible" -->
    <Button
        android:id="@+id/buttonSensoriaCoreCustomConfigStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:onClick="startSensoriaCustomConfigurationService"
        android:text="@string/SENSORIA_CORE_CUSTOM_CONFIGURATION_SERVICE"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDFU"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />


    <!-- android:visibility="visible" -->
    <Button
        android:id="@+id/buttonTemperatureServiceStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:enabled="false"
        android:onClick="startHealthThermometerService"
        android:text="Temperature Service"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonDFU" />

    <!-- android:visibility="visible" -->
    <Button
        android:id="@+id/buttonSensoriaCoreSmokeTest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:onClick="startSensoriaSmokeTestService"
        android:text="@string/SENSORIA_CORE_SMOKE_TEST_SERVICE"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonSensoriaCoreCustomConfigStart" />



</androidx.constraintlayout.widget.ConstraintLayout>
